--- a/templates/index.haml
+++ b/templates/index.haml
@@ -20,7 +20,7 @@
 					%li You will need to have <a href='http://www.ruby-lang.org/en/downloads/'>Ruby</a>, <a href='http://docs.rubygems.org/read/chapter/3'>Rubygems</a>, <a href='http://docs.heroku.com/heroku-command'>Heroku</a> and <a href='http://book.git-scm.com/2_installing_git.html'>Git</a> installed first.</li>
 					%li Drop into your command line and run the following commands:</li>
 					%ul
-						%li <span style='font-family: monospace;'>git clone git@github.com:tropo/tropo-volunteer.git --depth 1</span></li>
+						%li <span style='font-family: monospace;'>git clone http://github.com/tropo/tropo-volunteer.git --depth 1</span></li>
 						%li <span style='font-family: monospace;'>cd tropo-volunteer</span></li>
 						%li <span style='font-family: monospace;'>heroku create</span></li>
 						%li <span style='font-family: monospace;'>git push heroku master</span></li>
